--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "repository": "github:grafana/grafana",
   "scripts": {
     "build": "NODE_ENV=production nx exec --verbose -- webpack --config scripts/webpack/webpack.prod.js --progress",
+    "build:exporter": "NODE_ENV=production nx exec --verbose -- webpack --config scripts/webpack/panel-exporter/webpack.exporter.js --progress",
+    "build:exporter:dev": "NODE_ENV=dev nx exec -- webpack --config scripts/webpack/panel-exporter/webpack.exporter.dev.js",
     "build:nominify": "yarn run build -- --env noMinify=1",
     "build:stats": "NODE_ENV=production webpack --progress --config scripts/webpack/webpack.stats.js",
     "dev": "NODE_ENV=dev nx exec -- webpack --config scripts/webpack/webpack.dev.js",
@@ -221,6 +223,7 @@
     "postcss": "8.5.1",
     "postcss-loader": "8.1.1",
     "postcss-reporter": "7.1.0",
+    "postcss-scopify": "^1.0.0",
     "postcss-scss": "4.0.9",
     "prettier": "3.4.2",
     "pseudoizer": "^0.1.0",
